Avast ye! I have vanquished the dreaded complilation errors!